<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/app_update_dialog_bg"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/app_update_dialog_update_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_update_dialog_update_version"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvForceUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/app_update_dialog_update_force_tip"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tvContentTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_update_dialog_update_content_title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:maxHeight="150dp"
            android:scrollbarSize="1dp"
            android:scrollbars="vertical"
            android:text=""
            android:textSize="16sp"
            tools:text="@string/app_update_dialog_update_content" />

        <TextView
            android:id="@+id/tvFileSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_update_dialog_update_size"
            android:textSize="16sp" />

        <com.smart.appupdate.view.NumberProgressBar
            android:id="@+id/nbpProgress"
            style="@style/NumberProgressBar_Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvErrMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/app_update_dialog_download_error"
            android:visibility="gone"
            />

        <RelativeLayout
            android:id="@+id/rlUpdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <View
                android:id="@+id/tag"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/btnUpdateLater"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/tag"
                android:background="@drawable/update_later_bt_bg"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/app_update_dialog_update_later_text"
                android:textColor="@color/color_2261E0"
                android:textSize="12sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnUpdateNow"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/tag"
                android:background="@drawable/update_must_bt_bg"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/app_update_dialog_current_update_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="visible" />
        </RelativeLayout>



    </LinearLayout>
</LinearLayout>